qId change to qIndex

--- a/main.html
+++ b/main.html
@@ -6,10 +6,10 @@
         <script src="lib/react.js"></script>
         <script src="lib/react-dom.js"></script>
         <script src="lib/babel-browser.min.js"></script>
-        <script src="app.jsx" type="text/babel"></script>
+        <script src="appa.jsx" type="text/babel"></script>
         
         <!-- Styles -->
-        <link rel="stylesheet" type="text/css" href="public/stylesheets/st.css">
+        <link rel="stylesheet" type="text/css" href="public/stylesheets/style.css">
         <!-- Font Awesome -->
         <link rel="stylesheet" type="text/css" href="public/stylesheets/font-awesome.min.css">
         <!-- Bootstrap -->
