--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
         <script src="lib/react.js"></script>
         <script src="lib/react-dom.js"></script>
         <script src="lib/babel-browser.min.js"></script>
-        <script src="ap.jsx" type="text/babel"></script>
+        <script src="aplication.jsx" type="text/babel"></script>
         
         <!-- Styles -->
         <link rel="stylesheet" type="text/css" href="public/stylesheets/styless.css">
